*
* 2.0.4
*

- New parameters in Linux platform subagent to get additional CPU information (frequency, model, etc.)
- Fixed bugs in LLDP based network topology discovery
- Correct notifications on threshold script errors
- Option to use last known value for cluster data aggregation in case of data collecion failure
- Management console
	- Improved dashboard gauge widget
	- Added translucence option for dashboard line charts
	- Configurable display format for dashboard elements data sources
	- Improved inverted line chart support
	- DCI filter in DCI selection dialog
	- Configurable line width on ad-hoc line charts
	- Object tooltips in rack view
- Android console
	- Reorganized alarm notification section (issue #1194)
- Fixed issues: #859, #984, #1086, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231


*
* 2.0.3
*

- Additional parameters in Oracle subagent for redo logs and ASM monitoring
- NXSL: variable $errormsg holding error description set in catch block
- New NXSL function SplitString
- NXSL: new methods setExpectedState and setExcludeFromTopology in Interface class
- Default interface expected state can be configured
- GPS subagent (provides location data from NMEA compatible GPS receivers)
- Server can update node location using GPS subagent
- Fixed error while event alarm linking multiple times
- Fixed server hang on shutdown
- NetXMS processes uses LC_CTYPE from environment for terminal I/O
- Fixed bug in saving service checks
- Fixed server crash caused by heap corruption in MS SQL and DB/2 database drivers
- Fixed server deadlock caused by simultaneous use of instance discovery and transformation scripts
- Agent parameters for monitoring System V message queues
- New action User.ChangePassword in WINNT subagent
- Text2reach SMS driver improved
- Port check subagent can be configured to return negative value as response time in case of error
- Management console:
	- Fixed grid issues in network maps