@@ -6,6 +6,7 @@
 - Fixed bugs in LLDP based network topology discovery
 - Correct notifications on threshold script errors
 - Option to use last known value for cluster data aggregation in case of data collecion failure
+- NXSL: implemented compound assignment operators and prefix increment/decrement for array elements
 - Management console
 	- Improved dashboard gauge widget
 	- Added translucence option for dashboard line charts
@@ -16,7 +17,7 @@
 	- Object tooltips in rack view
 - Android console
 	- Reorganized alarm notification section (issue #1194)
-- Fixed issues: #859, #984, #1086, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231
+- Fixed issues: #405, #859, #984, #1086, #1186, #1194, #1195, #1196, #1197, #1200, #1209, #1210, #1214, #1223, #1227, #1231
 
 
 *
